feat: activation code
