# src/controllers/auth.controller.ts
@@ -21,6 +21,27 @@ const registerValidateSchema = Yup.object({
   fullName: Yup.string().required(),
   username: Yup.string().required(),
   email: Yup.string().required(),
+  password: Yup.string()
+    .required()
+    .min(6, "Password must be at least 6 characters")
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*[A-Z])/;
+        return regex.test(value);
+      }
+    )
+    .test(
+      "at-least-one-uppercase-letter",
+      "Contains at least one uppercase letter",
+      (value) => {
+        if (!value) return false;
+        const regex = /^(?=.*\d)/;
+        return regex.test(value);
+      }
+    ),
   confirmPassword: Yup.string()
     .required()
     .oneOf([Yup.ref("password"), ""], "password not match"),
@@ -30,6 +51,10 @@ export default {
   async register(req: Request, res: Response) {
     /**
      #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+    required: true,
+    schema: {$ref: "#/components/schemas/RegisterRequest"}
+  }
      */
     const { fullName, username, email, password, confirmPassword } =
       req.body as unknown as TRegister;
@@ -67,7 +92,7 @@ export default {
     #swagger.tags = ['Auth']
   #swagger.requestBody = {
     required: true,
-    schema: {$href: "#/components/schemas/LoginRequest"}
+    schema: {$ref: "#/components/schemas/LoginRequest"}
   }
   */
 
@@ -84,6 +109,7 @@ export default {
             username: identifier,
           },
         ],
+        isActive: true,
       });
 
       if (!userByIdentifier) {
@@ -135,6 +161,39 @@ export default {
       res.status(200).json({
         message: "success get user profile",
         data: result,
+      });
+    } catch (error) {
+      const err = error as unknown as Error;
+      res.status(400).json({
+        message: err.message,
+        data: null,
+      });
+    }
+  },
+  async activation(req: Request, res: Response) {
+    /**
+     #swagger.tags = ['Auth']
+     #swagger.requestBody = {
+     required: true,
+     schema: {$ref: '#/components/schemas/ActivationRequest'}
+     }
+     */
+    try {
+      const { code } = req.body as { code: string };
+      const user = await UserModel.findOneAndUpdate(
+        {
+          activationCode: code,
+        },
+        {
+          isActive: true,
+        },
+        {
+          new: true,
+        }
+      );
+      res.status(200).json({
+        message: "user successfully activated",
+        data: user,
       });
     } catch (error) {
       const err = error as unknown as Error;
